Resolves: tdf#111864 render progress bar for Ambiance theme properly

Change-Id: I8ce43e4516413ea3779a128b374a931b080ae970
Reviewed-on: https://gerrit.libreoffice.org/41879
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>